# sparse-dictionary-learning

./: .gitignore  QUICKSTART.md  README.md  pyproject.toml
config/: data_config.yaml  model_config.yaml  training_config.yaml
scripts/: build_manifest.py  download_first.py  evaluate.py  test_arbitrary.py  test_crumb.py  train.py  train_crumb.py  visualize_crumb.py  visualize_inputs.py
src/first_sparse/: __init__.py
src/first_sparse/models/: __init__.py  autoencoder.py  decoder.py  encoder.py  losses.py
src/first_sparse/training/: __init__.py  trainer.py
src/first_sparse/utils/: __init__.py  config.py  metrics.py  visualization.py
tests/: test_basic.py
